# ecosystem_schemas

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ecosystem_schemas/: __init__.py  argos_decision.py  trading_signal.py
tests/: conftest.py  test_argos_decision.py  test_contracts.py  test_trading_signal.py
tests/fixtures/: argos_decision_activate.json  trading_signal_iris.json  trading_signal_kronos.json  trading_signal_smaug.json
