[project]
name = "ecosystem_schemas"
version = "0.1.0"
description = "Schémas Pydantic partagés de l'écosystème trading (TradingSignal, ArgosDecision)"
requires-python = ">=3.11"
authors = [{ name = "Bertrand Debroise" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecosystem_schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ecosystem_schemas --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ecosystem_schemas"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RET", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
