[project]
name = "ecosystem_schemas"
version = "0.1.0"
description = "Schémas Pydantic partagés de l'écosystème trading (TradingSignal, ArgosDecision)"
requires-python = ">=3.11"
authors = [{ name = "Bertrand Debroise" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "deptry>=0.20",
    "vulture>=2.11",
    "radon>=6.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecosystem_schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ecosystem_schemas --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["src/ecosystem_schemas"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RET", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── deptry ── (détecte deps déclarées inutilisées / utilisées non déclarées)
[tool.deptry]
known_first_party = ["ecosystem_schemas"]
# Outils CLI (jamais importés dans le code, mais utilisés via `uv run <tool>`)
[tool.deptry.per_rule_ignores]
DEP002 = ["pytest", "pytest-cov", "ruff", "mypy", "deptry", "vulture", "radon", "pre-commit"]

# ── vulture ── (détecte le code mort)
[tool.vulture]
paths = ["src"]
min_confidence = 80
ignore_decorators = ["@pytest.fixture", "@field_validator", "@model_validator"]
ignore_names = ["cls"]  # signature obligatoire des @classmethod Pydantic

# ── radon ── (complexité cyclomatique — config CLI uniquement, pas pyproject)
